# data-scientist

./: .gitignore  README.md  anscombe_quartet.ipynb  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Linear Regression/: regressao_linear_from_scratch.ipynb
cinematic_chronos/: .env.example  README.md
cinematic_chronos/config/: ingestion.json
cinematic_chronos/notebooks/: 01_eda_gold_understanding.ipynb  02_runtime_over_time_visual_analysis.ipynb  03_statistical_inference_runtime_trend.ipynb  04_temporal_context_decade_splines.ipynb  05_robustness_annual_aggregation.ipynb
cinematic_chronos/scripts/: run_enrich_tmdb_runtime.py  run_extract.py  run_process_bronze.py
cinematic_chronos/src/cinematic_chronos/: __init__.py  cli.py  cli_logging.py  config.py  ingestion.py  models.py  processing.py  storage.py
cinematic_chronos/src/cinematic_chronos/clients/: __init__.py  tmdb.py
cinematic_chronos/src/cinematic_chronos/ingestion/: __init__.py  kaggle.py  pipeline.py
cinematic_chronos/src/cinematic_chronos/processing/: __init__.py  bronze.py  runtime_enrichment.py
cinematic_chronos/src/cinematic_chronos/utils/: __init__.py  columns.py  env.py
cinematic_chronos/tests/: test_ingestion.py
messi-six-sigma/: README.md  messi_six_sigma_analise_contextual.ipynb  messi_six_sigma_replicacao.ipynb
